[gd_scene load_steps=2 format=3 uid="uid://bwulx6xbpe2e7"]

[ext_resource type="Script" path="res://scripts/ui/production_row_ui.gd" id="1_djxhc"]

[node name="Control" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djxhc")

[node name="ProductionInfo" type="Label" parent="."]
layout_mode = 2
text = "1 X -> 2 Y"

[node name="AssignmentButton" type="OptionButton" parent="."]
layout_mode = 2

[connection signal="item_focused" from="AssignmentButton" to="." method="_on_assignment_button_item_focused"]
[connection signal="item_selected" from="AssignmentButton" to="." method="_on_assignment_button_item_selected"]
[connection signal="pressed" from="AssignmentButton" to="." method="_on_assignment_button_pressed"]
